--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 > <title>exterpolaton</title></polyline>`;
       }
 
-      const mySVG = document.getElementById("mySVG");
+      const mySVG = document.getElementById("mySVG"); //jhhhhhhh
       const mySVG2 = document.getElementById("mySVG2");
       //var svgNS = "http://www.w3.org/2000/svg";
       const graphWidth = 700;
